--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
 Data:
-<ag-grid-angular
-  #agGrid
-  style="width: 500px; height: 150px;"
-  class="ag-theme-balham"
-  [rowData]="data | async"
-  [columnDefs]="columnDefs"
->
-</ag-grid-angular>
+<my-list customerId="blah"></my-list>
